# ultimate_toolkit_by_egebulut

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  TODO.md  development_lifecycle.md  index.html  notes_from_installer_agent.md  package-lock.json  package.json  tailwind.config.js  test_results.md  tsconfig.json
.github/workflows/: ci.yml  release.yml
backups/v1.0.1/: App.tsx.bak  ai_chat_index.tsx.bak
plugins/python/: ocr_plugin.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: ai_chat.rs  mod.rs  ocr.rs  python_plugin.rs
src/__tests__/: App.test.tsx
src/components/: CustomPluginLoader.tsx  DebugPanel.tsx  FloatingButton.tsx  MarkdownRenderer.tsx  PluginCard.tsx  SettingsPanel.tsx  Sidebar.tsx  Tooltip.tsx  Welcome.tsx
src/components/__tests__/: CustomPluginLoader.test.tsx  FloatingButton.test.tsx  MarkdownRenderer.test.tsx  PluginCard.test.tsx  SettingsPanel.test.tsx  Sidebar.test.tsx  Tooltip.test.tsx  Welcome.test.tsx
src/floating/: FloatingApp.tsx  FloatingToolbar.tsx
src/floating/__tests__/: FloatingToolbar.test.tsx
src/hooks/: useAutoUpdate.ts  useConversation.ts  useLogger.ts  useSettings.ts  useTheme.ts
src/hooks/__tests__/: useAutoUpdate.test.ts  (+3 more)
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts
src/utils/: storage.ts  tauri.ts
ultimate_toolkit_web/: docs.html  index.html  vercel.json
ultimate_toolkit_web/.vercel/: project.json
ultimate_toolkit_web/docs/: index.html
(+71 files in other folders)
